Title of document, duration of each offer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Speiseplan</title>
+    <title>Cafeteria Angebote</title>
     <style>
         /* Your CSS styles here */
         body,
@@ -125,7 +125,7 @@
         updateOffer();
 
         // Set an interval to cycle through offers
-        setInterval(updateOffer, 3000); // Change offers every 3 seconds
+        setInterval(updateOffer, 15000); // Change offers every 15 seconds
     </script>
 </body>
 
