Fix spelling errors and format code using Prettier

--- a/Server/data/panel.html
+++ b/Server/data/panel.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Panel</title>
     <style>
-        body{
+        body {
             background-color: rgb(36, 36, 36);
             color: white;
             font-family: Arial, Helvetica, sans-serif;
         }
-        .headder{
+
+        .headder {
             font-size: 300%;
             font-weight: bold;
             margin-bottom: 20px;
         }
-        .navbar{
+
+        .navbar {
             width: 100%;
             height: 50px;
             background-color: rgb(71, 71, 71);
@@ -23,24 +26,28 @@
             justify-content: center;
             align-items: center;
         }
-        .navbar-item{
+
+        .navbar-item {
             margin-left: 20px;
             margin-right: 20px;
             font-size: 150%;
             text-decoration: none;
         }
-        .navbar-item-selected{
+
+        .navbar-item-selected {
             margin-left: 20px;
             margin-right: 20px;
             font-size: 150%;
             text-decoration: none;
             border-bottom: 2px solid white;
         }
-        a{
+
+        a {
             color: white;
             text-decoration: none;
         }
-        .content{
+
+        .content {
             width: 100%;
             height: 100%;
             display: flex;
@@ -48,7 +55,8 @@
             align-items: center;
             flex-direction: column;
         }
-        .footer{
+
+        .footer {
             width: 100%;
             height: 50px;
             background-color: rgb(71, 71, 71);
@@ -56,11 +64,13 @@
             justify-content: center;
             align-items: center;
         }
-        p{
+
+        p {
             font-size: 150%;
         }
     </style>
 </head>
+
 <body>
     <div class="headder">
         Cafeteria Panel
@@ -79,13 +89,14 @@
     <div class="content">
         <p>
             Hallo 👋
-            <p>
-                Nutzen sie die Navbar um einen menüpunkt auszuwählen.
-            </p>
+        <p>
+            Nutzen sie die Navbar um einen Menüpunkt auszuwählen.
+        </p>
         </p>
     </div>
     <div class="footer">
         <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
     </div>
 </body>
+
 </html>
