--- a/client/webfiles/news.html
+++ b/client/webfiles/news.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Monitor</title>
     <style>
-        body{
+        body {
             background-color: black;
             color: white;
             user-select: none;
             font-family: Verdana, sans-serif;
         }
-        .centeredcontainer{
+
+        .centeredcontainer {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -19,7 +21,8 @@
             font-size: 30px;
             text-align: center;
         }
-        .copyrightfooter{
+
+        .copyrightfooter {
             position: absolute;
             bottom: 0;
             left: 0;
@@ -30,9 +33,11 @@
         }
     </style>
 </head>
+
 <body>
     <div class="centeredcontainer">
-        <img src="https://raw.githubusercontent.com/n3r4zzurr0/svg-spinners/main/preview/3-dots-fade-white-36.svg" height="60" alt="loading">
+        <img src="https://raw.githubusercontent.com/n3r4zzurr0/svg-spinners/main/preview/3-dots-fade-white-36.svg"
+            height="60" alt="loading">
         <div class="subtext">
             Nachrichten werden geladen...
         </div>
@@ -40,6 +45,7 @@
     <div class="copyrightfooter">
         © 2023 by Gabriel und Max
     </div>
-    
+
 </body>
+
 </html>
