Second WIP commit (minimal changes)

--- a/Server/data/news.html
+++ b/Server/data/news.html
@@ -10,7 +10,7 @@
         body,
         html {
             height: 100%;
-            margin: 10px;
+            margin: 0%;
             padding: 0;
         }
 
@@ -34,6 +34,7 @@
 
         .offers-container {
             width: 80%;
+            height: 90%;
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -50,7 +51,7 @@
             border-radius: 20px;
 
 
-            width: calc(100% - 190px);
+            width: calc(90% - 190px);
             object-fit: cover;
 
         }
@@ -119,11 +120,11 @@
             <div class="offer-content" id="offerContent">
                 <img id="offerImage"
                     src="https://images.tagesschau.de/image/af69e28b-a10d-4947-a2e2-c732eb5fd3c4/AAABi2fDFUA/AAABibBxrfI/16x9-1920.jpg"
-                    alt="Angebotsbild">
+                    alt="Nachrichten: Inland Bild">
 
                 <div class="bottomlinecontainer">
                     <div class="texts">
-                        <p id="headline">Habeck zu schärferen Abschieberegeln</p>
+                        <p id="headline">Habeck zu schärferen Abschieberegeln (Tagesschau API oder Caf-Server kaputt?)</p>
                         <p id="firstsentence">Die Bundesregierung hat die Regeln zur Abschiebung ausreisepflichtiger
                             Ausländer verschärft.</p>
                     </div>
