--- a/client/webfiles/menu.html
+++ b/client/webfiles/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Angebote</title>
+    <title>Cafeteria Monitor</title>
     <style>
         /* Your CSS styles here */
         body,
