Fix spelling errors and format code using Prettier

--- a/client/webfiles/menu.html
+++ b/client/webfiles/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Angebote</title>
+    <title>Cafeteria Monitor</title>
     <style>
         /* Your CSS styles here */
         body,
@@ -68,14 +68,14 @@
         <div class="offers-container">
             <h2>Hier könnte ihre Werbung stehen</h2>
             <div class="offer-content" id="offerContent">
-                
+
                 <p id="offerName"> Interesse? </p>
-                
+
             </div>
         </div>
     </div>
 
-   
+
 </body>
 
 </html>
