--- a/Server/data/panel.html
+++ b/Server/data/panel.html
@@ -75,6 +75,9 @@
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
+        <div class="navbar-item">
+            <a href="/panel/media">Media verwalten</a>
+        </div>
     </div>
     <div class="content">
         <p>
