--- a/Server/data/editentry.html
+++ b/Server/data/editentry.html
@@ -79,6 +79,9 @@
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
+        <div class="navbar-item">
+            <a href="/panel/media">Media verwalten</a>
+        </div>
     </div>
     <div class="content">
         <div class="tables">
@@ -121,7 +124,7 @@
         console.log(data);
         xml = new XMLHttpRequest();
         xml.open("POST", "/api/editentry", true);
-        xml.setRequestHeader("Content-Type", "pplication/x-www-form-urlencoded");
+        xml.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
         xml.send(data);
         xml.onreadystatechange = function(){
             if(xml.readyState == 4){
