--- a/Server/data/uploadmedia.html
+++ b/Server/data/uploadmedia.html
@@ -112,6 +112,9 @@
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
+        <div class="navbar-item">
+            <a href="/panel/media">Media verwalten</a>
+        </div>
     </div>
     <div class="content">
         <label class="custom-file-upload" id="uisw">
