verdana project-wide, hide cursor with hotkey

--- a/Server/data/menu.html
+++ b/Server/data/menu.html
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: Verdana, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size: 150%;
             background-color: #f0f0f0;
             text-align: center;
