--- a/client/webfiles/news.html
+++ b/client/webfiles/news.html
@@ -9,7 +9,7 @@
             background-color: black;
             color: white;
             user-select: none;
-            font-family: Verdana, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         .centeredcontainer{
             position: absolute;
