--- a/client/webfiles/splash.html
+++ b/client/webfiles/splash.html
@@ -9,7 +9,7 @@
             background-color: black;
             color: white;
             user-select: none;
-            font-family: Verdana, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         .centeredcontainer{
             position: absolute;
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="copyrightfooter">
-        © 2023 by Gabriel und Max
+        © 2023 by logilype und felixmax_
     </div>
 </body>
 </html>
