--- a/Server/data/panel.html
+++ b/Server/data/panel.html
@@ -8,7 +8,7 @@
         body{
             background-color: rgb(36, 36, 36);
             color: white;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         .headder{
             font-size: 300%;
