--- a/Server/data/panel.html
+++ b/Server/data/panel.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Panel</title>
+    <title>Cafeteria Panel - Home</title>
     <style>
         body{
             background-color: rgb(36, 36, 36);
             color: white;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
-        .headder{
+        .header{
             font-size: 300%;
             font-weight: bold;
             margin-bottom: 20px;
@@ -62,7 +62,7 @@
     </style>
 </head>
 <body>
-    <div class="headder">
+    <div class="header">
         Cafeteria Panel
     </div>
     <div class="navbar">
@@ -83,7 +83,7 @@
         <p>
             Hallo 👋
             <p>
-                Nutzen sie die Navbar um einen menüpunkt auszuwählen.
+                Nutzen sie die Navbar um einen Menüpunkt auszuwählen.
             </p>
         </p>
     </div>
