--- a/Server/data/uploadmedia.html
+++ b/Server/data/uploadmedia.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Panel</title>
     <style>
-        body{
+
+        body {
             background-color: rgb(36, 36, 36);
             color: white;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
-        .headder{
+
+        .header {
             font-size: 300%;
             font-weight: bold;
             margin-bottom: 20px;
         }
-        .navbar{
+
+        .navbar {
             width: 100%;
             height: 50px;
             background-color: rgb(71, 71, 71);
@@ -23,24 +26,28 @@
             justify-content: center;
             align-items: center;
         }
-        .navbar-item{
+
+        .navbar-item {
             margin-left: 20px;
             margin-right: 20px;
             font-size: 150%;
             text-decoration: none;
         }
-        .navbar-item-selected{
+
+        .navbar-item-selected {
             margin-left: 20px;
             margin-right: 20px;
             font-size: 150%;
             text-decoration: none;
             border-bottom: 2px solid white;
         }
-        a{
+
+        a {
             color: white;
             text-decoration: none;
         }
-        .content{
+
+        .content {
             width: 100%;
             height: 100%;
             display: flex;
@@ -48,7 +55,8 @@
             align-items: center;
             flex-direction: column;
         }
-        .footer{
+
+        .footer {
             width: 100%;
             height: 50px;
             background-color: rgb(71, 71, 71);
@@ -56,12 +64,15 @@
             justify-content: center;
             align-items: center;
         }
-        p{
+
+        p {
             font-size: 150%;
         }
-        input[type="file"] {
-        display: none;
+
+        input [type="file"] {
+            display: none;
         }
+
         .imageselector {
             margin: auto;
             display: block;
@@ -69,6 +80,7 @@
             width: 500px;
             height: 50px;
         }
+
         .custom-file-upload {
             margin: auto;
             display: block;
@@ -83,6 +95,7 @@
             font-size: 20px;
             cursor: pointer;
         }
+
         @keyframes shake {
             0% { transform: translate(1px, 1px) rotate(0deg); }
             10% { transform: translate(-1px, -2px) rotate(-1deg); }
@@ -96,10 +109,11 @@
             90% { transform: translate(1px, 2px) rotate(0deg); }
             100% { transform: translate(1px, -2px) rotate(-1deg); }
         }
+        
     </style>
 </head>
 <body>
-    <div class="headder">
+    <div class="header">
         Cafeteria Panel
     </div>
     <div class="navbar">
@@ -122,8 +136,8 @@
             <div id="uploadingtextb" >Datei wählen</div>
         <input class="imageselector" id="selectors" type="file" accept="image/png, image/jpeg">
         </label>
-        <p> Maximum: 3MB</p>
-        <p> Benen sie die Datei vor dem upload um, um die übersicht zu behalten. Das spätere umbenen ist nicht möglich.</p>
+        <p>Maximum: 3MB</p>
+        <p>Benennen sie die Datei vor dem Upload um, um die Übersicht zu behalten. Das spätere Umbenennen ist nicht möglich.</p>
     </div>
     <div class="footer">
         <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
