--- a/client/webfiles/menu.html
+++ b/client/webfiles/menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Angebote</title>
     <style>
-        /* Your CSS styles here */
+
         body,
         html {
             height: 100%;
@@ -60,10 +60,22 @@
             opacity: 0;
             transition: opacity 0.5s;
         }
+
+        .title-of-caf-institute-thing {
+            /* Mainly make the title of caf institute thing overlay on top of other things */
+            position: absolute;
+            top: 0.5%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 1;
+            font-size: 10pt;
+        }
+
     </style>
 </head>
 
 <body>
+    <h3 class="title-of-caf-institute-thing">Cafeteria im Schulzentrum</h3>
     <div class="container-table">
         <div class="offers-container">
             <h2>Hier könnte ihre Werbung stehen</h2>
@@ -77,5 +89,4 @@
 
    
 </body>
-
 </html>
