--- a/client/webfiles/scroll-main-page.html
+++ b/client/webfiles/scroll-main-page.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="de">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,13 +12,11 @@
             overflow: hidden;
             scroll-behavior: smooth;
         }
-
         body {
             display: flex;
             align-items: flex-start;
             transition: transform 1s ease;
         }
-
         #mainContainer {
             display: flex;
             flex-direction: column;
@@ -27,22 +24,19 @@
             position: relative;
             z-index: 1;
         }
-
         #iframesContainer {
             flex: 1;
             display: flex;
             flex-direction: column;
-            overflow: hidden; /* Change from auto to hidden */
-            scroll-snap-type: y mandatory; /* Added scroll-snap-type for smoother scrolling */
+            overflow: hidden;
+            scroll-snap-type: y mandatory;
         }
-
         iframe {
             width: 100%;
             height: 100vh;
             border: none;
-            scroll-snap-align: start; /* Added scroll-snap-align for smoother scrolling */
+            scroll-snap-align: start;
         }
-
         .scroll-indicator-container {
             position: fixed;
             top: 50%;
@@ -53,7 +47,6 @@
             flex-direction: column;
             pointer-events: none;
         }
-
         .scroll-indicator-point {
             width: 10px;
             height: 10px;
@@ -63,34 +56,27 @@
             opacity: 0.5;
             transition: opacity 0.5s;
         }
-
         .scroll-indicator-point.active {
             opacity: 1;
         }
     </style>
 </head>
-
 <body>
     <div id="mainContainer">
         <div id="iframesContainer">
             <iframe src="/server/data/menu.html" id="offersFrame"></iframe>
             <iframe src="/server/data/news.html" id="newsFrame"></iframe>
             <iframe src="/client/webfiles/advertisement.html" id="advertisementFrame"></iframe>
-            <iframe src="https://mese.webuntis.com/WebUntis/monitor?school=kopernikus-rs&monitorType=subst&format=Sch%C3%BCler" id="substitutionFrame"></iframe>
-            <!-- Add more iframe elements for additional pages -->
+            <iframe src="https://mese.webuntis.com/WebUntis/monitor?school=kopernikus-rs&monitorType=subst&format=Schüler" id="substitutionFrame"></iframe>
         </div>
     </div>
-
-    <div class="scroll-indicator-container">
-        <!-- Add scroll indicator points dynamically based on the number of iframes -->
-    </div>
-
+    <div class="scroll-indicator-container"></div>
     <script>
         const iframes = document.querySelectorAll('#iframesContainer iframe');
         const scrollIndicatorContainer = document.querySelector('.scroll-indicator-container');
         const indicatorPoints = [];
         let currentPage = 0;
-        const timeoutDuration = 5000; // Set the initial timeout duration
+        const timeoutDuration = 5000;
 
         function createScrollIndicatorPoints() {
             for (let i = 0; i < iframes.length; i++) {
@@ -101,8 +87,6 @@
             }
         }
 
-        createScrollIndicatorPoints();
-
         function updateScrollIndicator() {
             indicatorPoints.forEach((point, index) => {
                 point.classList.toggle('active', index === currentPage);
@@ -111,27 +95,13 @@
 
         function scrollToNextSection() {
             currentPage = (currentPage + 1) % iframes.length;
-
-            iframes[currentPage].scrollIntoView({
-                behavior: 'smooth'
-            });
-
-            // Update scroll indicator after a short delay to ensure proper tracking
-            setTimeout(() => {
-                updateScrollIndicator();
-            }, 500);
+            iframes[currentPage].scrollIntoView({ behavior: 'smooth' });
+            setTimeout(updateScrollIndicator, 500);
         }
 
-        // Scroll to the first section initially
-        setTimeout(() => scrollToNextSection(), timeoutDuration);
-
-        // Set an interval for scrolling to the next section
-        setInterval(() => {
-            scrollToNextSection();
-        }, timeoutDuration);
-
+        createScrollIndicatorPoints();
+        setTimeout(scrollToNextSection, timeoutDuration);
+        setInterval(scrollToNextSection, timeoutDuration);
     </script>
-
 </body>
-
 </html>
