--- a/server/data/menuedit.html
+++ b/server/data/menuedit.html
@@ -1,78 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Panel - Menü bearbeiten</title>
+    <title>Menü Bearbeiten</title>
     <style>
-
         body {
-            background-color: rgb(36, 36, 36);
-            color: white;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
         }
-
         .header {
-            font-size: 300%;
-            font-weight: bold;
-            margin-bottom: 20px;
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+            background-color: #333;
+            color: white;
         }
-
         .navbar {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
             display: flex;
             justify-content: center;
-            align-items: center;
+            background-color: #444;
+            padding: 10px;
         }
-
-        .navbar-item {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-        }
-
-        .navbar-item-selected {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-            border-bottom: 2px solid white;
-        }
-
-        a {
+        .navbar-item, .navbar-item-selected {
+            margin: 0 10px;
             color: white;
             text-decoration: none;
+        }
+        .navbar-item-selected {
+            font-weight: bold;
         }
         .content {
+            padding: 20px;
+        }
+        .tables {
+            margin-bottom: 20px;
+        }
+        table {
             width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            border-collapse: collapse;
         }
-
-        .footer {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
         }
-
-        p {
-            font-size: 150%;
+        th {
+            background-color: #f2f2f2;
         }
-
         .actionbuttons {
             margin-top: 30px;
             margin-bottom: 30px;
         }
-        
+        .footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -123,7 +109,6 @@
             window.location.href = "/panel/media";
         });
         document.querySelector("#refreshbtn").addEventListener("click", function(){
-            
             window.location.href = "/panel?intent=refresh";
         });
     </script>
