--- a/client/webfiles/news.html
+++ b/client/webfiles/news.html
@@ -3,38 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Monitor</title>
+    <title>News</title>
     <style>
-        body {
-            background-color: black;
-            color: white;
-            user-select: none;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        .centeredcontainer {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 30px;
-            text-align: center;
-        }
-        .copyrightfooter {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            text-align: center;
-            padding: 10px;
-            font-size: 10px;
-        }
+        body, html { height: 100%; margin: 0; padding: 0; }
+        body { display: flex; justify-content: center; align-items: center; font-family: Verdana, sans-serif; font-size: 150%; background-color: #f0f0f0; text-align: center; flex-direction: column; position: relative; }
+        .news-container { width: 80%; background-color: #fff; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); padding: 20px; }
+        .news-item { margin-bottom: 20px; }
+        img { max-width: 100%; height: auto; border-radius: 10px; }
+        h2 { font-size: 225%; }
     </style>
 </head>
 <body>
-    <div class="centeredcontainer">
-        <img src="https://raw.githubusercontent.com/n3r4zzurr0/svg-spinners/main/preview/3-dots-fade-white-36.svg" height="60" alt="loading">
-        <div class="subtext">Nachrichten werden geladen...</div>
+    <div class="news-container" id="newsContainer">
+        <h2>Aktuelle Nachrichten</h2>
     </div>
-    <div class="copyrightfooter">© 2023 by logilype und felixmax_</div>
+
+    <script>
+        fetch('/news')
+            .then(response => response.json())
+            .then(data => {
+                const newsContainer = document.getElementById('newsContainer');
+                data.forEach(newsItem => {
+                    const newsElement = document.createElement('div');
+                    newsElement.className = 'news-item';
+                    newsElement.innerHTML = `
+                        <h3>${newsItem.title}</h3>
+                        <img src="${newsItem.image}" alt="News Image">
+                        <p>${newsItem.firstSentence}</p>
+                        <a href="${newsItem.shareurl}" target="_blank">Mehr lesen</a>
+                    `;
+                    newsContainer.appendChild(newsElement);
+                });
+            })
+            .catch(error => console.error('Error fetching news:', error));
+    </script>
 </body>
 </html>
