--- a/server/data/uploadmedia.html
+++ b/server/data/uploadmedia.html
@@ -115,6 +115,7 @@
 <body>
     <div class="header">
         Cafeteria Panel
+        <button id="logoutBtn" style="float: right; background-color: #ff4d4d; color: white; border: none; cursor: pointer; font-size: 50%; padding: 7px 15px; border-radius: 5px;">Ausloggen</button>
     </div>
     <div class="navbar">
         <div class="navbar-item">
@@ -126,7 +127,7 @@
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
         </div>
-        <div class="navbar-item">
+        <div class="navbar-item-selected">
             <a href="/panel/media">Media verwalten</a>
         </div>
     </div>
