--- a/server/data/panel.html
+++ b/server/data/panel.html
@@ -64,6 +64,7 @@
 <body>
     <div class="header">
         Cafeteria Panel
+        <button id="logoutBtn" style="float: right; background-color: #ff4d4d; color: white; border: none; cursor: pointer; font-size: 50%; padding: 7px 15px; border-radius: 5px;">Ausloggen</button>
     </div>
     <div class="navbar">
         <div class="navbar-item-selected">
@@ -90,5 +91,13 @@
     <div class="footer">
         <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
     </div>
+    <script>
+        document.getElementById("logoutBtn").addEventListener("click", function() {
+            // Clear the token cookie
+            document.cookie = "token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+            // Redirect to the login page
+            window.location.href = "/ui/login";
+        });
+    </script>
 </body>
 </html>
