--- a/server/data/newentry.html
+++ b/server/data/newentry.html
@@ -4,77 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Panel - Menü bearbeiten</title>
-    <style>
-
-        body {
-            background-color: rgb(36, 36, 36);
-            color: white;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        .header {
-            font-size: 300%;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .navbar {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .navbar-item {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-        }
-
-        .navbar-item-selected {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-            border-bottom: 2px solid white;
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .content {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        .footer {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        p {
-            font-size: 150%;
-        }
-
-        .actionbuttons {
-            margin-top: 30px;
-            margin-bottom: 30px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="header">
@@ -124,7 +54,7 @@
         
     </div>
     <div class="footer">
-        <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
+        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype & Felixmax_ 2024</a>
     </div>
 </body>
 <script>
