--- a/server/data/uploadmedia.html
+++ b/server/data/uploadmedia.html
@@ -4,113 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Panel</title>
-    <style>
-
-        body {
-            background-color: rgb(36, 36, 36);
-            color: white;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        .header {
-            font-size: 300%;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .navbar {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .navbar-item {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-        }
-
-        .navbar-item-selected {
-            margin-left: 20px;
-            margin-right: 20px;
-            font-size: 150%;
-            text-decoration: none;
-            border-bottom: 2px solid white;
-        }
-
-        a {
-            color: white;
-            text-decoration: none;
-        }
-
-        .content {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-        }
-
-        .footer {
-            width: 100%;
-            height: 50px;
-            background-color: rgb(71, 71, 71);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        p {
-            font-size: 150%;
-        }
-
-        input [type="file"] {
-            display: none;
-        }
-
-        .imageselector {
-            margin: auto;
-            display: block;
-            margin-top: 20px;
-            width: 500px;
-            height: 50px;
-        }
-
-        .custom-file-upload {
-            margin: auto;
-            display: block;
-            margin-top: 20px;
-            margin-bottom: 20px;
-            width: 500px;
-            height: 50px;
-            background-color: #5c5c5c;
-            border-radius: 12px;
-            padding: 10px;
-            text-align: center;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
-        @keyframes shake {
-            0% { transform: translate(1px, 1px) rotate(0deg); }
-            10% { transform: translate(-1px, -2px) rotate(-1deg); }
-            20% { transform: translate(-3px, 0px) rotate(1deg); }
-            30% { transform: translate(3px, 2px) rotate(0deg); }
-            40% { transform: translate(1px, -1px) rotate(1deg); }
-            50% { transform: translate(-1px, 2px) rotate(-1deg); }
-            60% { transform: translate(-3px, 1px) rotate(0deg); }
-            70% { transform: translate(3px, 1px) rotate(-1deg); }
-            80% { transform: translate(-1px, -1px) rotate(1deg); }
-            90% { transform: translate(1px, 2px) rotate(0deg); }
-            100% { transform: translate(1px, -2px) rotate(-1deg); }
-        }
-        
-    </style>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="header">
@@ -141,7 +35,7 @@
         <p>Benennen sie die Datei vor dem Upload um, um die Übersicht zu behalten. Das spätere Umbenennen ist nicht möglich.</p>
     </div>
     <div class="footer">
-        <a href="https://solo.to/felixmax_" style="color: white; text-decoration: none;">© Felixmax_ 2023</a>
+        <a href="https://github.com/logilype/cafeteria-digital-signage" style="color: white; text-decoration: none;">© Logilype & Felixmax_ 2024</a>
     </div>
     <script>
         const uis = document.getElementById("uisw");
