--- a/server/data/editentry.html
+++ b/server/data/editentry.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         Cafeteria Panel
-        <button id="logoutBtn" style="float: right; background-color: #ff4d4d; color: white; border: none; cursor: pointer; font-size: 50%; padding: 7px 15px; border-radius: 5px;">Ausloggen</button>
+        <button id="logoutBtn">Ausloggen</button>
     </div>
     <div class="navbar">
         <div class="navbar-item">
@@ -25,7 +25,7 @@
             <a href="/panel/media">Media verwalten</a>
         </div>
     </div>
-    <div class="content">
+    <div class="content" style="width: 100%;">
         <div class="tables">
             <table>
                 <tr>
@@ -36,13 +36,14 @@
                     <th>id</th>
                 </tr>
                 <tr>
-                    <td><input type="text" name="name" placeholder="(name)" required></td>
-                    <td><input type="text" name="price" placeholder="(price)" required></td>
-                    <td><select id="imgkey" style="width: 200px;">
-                        (allimgs)
-
-                    </select></td>
-                    <td><input type="text" name="days" placeholder="(days)" required style="width: 300px;"></td>
+                    <td><input type="text" name="name" value="(name)" style="width: 95%;" required></td>
+                    <td><input type="text" name="price" value="(price)" style="width: 95%;" required></td>
+                    <td>
+                        <select id="imgkey" style="width: 95%;">
+                            (allimgs)
+                        </select>
+                    </td>
+                    <td><input type="text" name="days" value="(days)" style="width: 95%;" required></td>
                     <td id="ids">(id)</td>
                 </tr> 
             </table>
