--- a/server/data/uploadmedia.html
+++ b/server/data/uploadmedia.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         Cafeteria Panel
-        <button id="logoutBtn" style="float: right; background-color: #ff4d4d; color: white; border: none; cursor: pointer; font-size: 50%; padding: 7px 15px; border-radius: 5px;">Ausloggen</button>
+        <button id="logoutBtn">Ausloggen</button>
     </div>
     <div class="navbar">
         <div class="navbar-item">
