modal implementation, design change, move header to middle etc

--- a/server/data/media.html
+++ b/server/data/media.html
@@ -11,12 +11,12 @@
         Cafeteria Panel
         <button id="logoutBtn">Ausloggen</button>
     </div>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div class="navbar-item">
             <a href="/panel">Home</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menu">Menü bearbeiten</a>
+            <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="tables">
+        <div class="tables-media">
             <table>
                 <tr>
                     <th>Name</th>
