--- a/server/data/panel.html
+++ b/server/data/panel.html
@@ -11,12 +11,12 @@
         Cafeteria Panel
         <button id="logoutBtn">Ausloggen</button>
     </div>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div class="navbar-item-selected">
             <a href="/panel">Home</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menu">Menü bearbeiten</a>
+            <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
@@ -29,7 +29,7 @@
         <p>
             Hallo 👋
             <p>
-                Nutzen sie die Navbar um einen Menüpunkt auszuwählen.
+                Nutzen sie die Navbar, um einen Menüpunkt auszuwählen.
             </p>
         </p>
     </div>
