--- a/client/webfiles/splash.html
+++ b/client/webfiles/splash.html
@@ -38,11 +38,11 @@
     <div class="centeredcontainer">
         <img src="https://raw.githubusercontent.com/n3r4zzurr0/svg-spinners/main/preview/3-dots-fade-white-36.svg" height="60" alt="loading">
         <div class="subtext">
-            Menü wird geladen...
+            Wird geladen, bitte warten...
         </div>
     </div>
     <div class="copyrightfooter">
-        © 2023 by logilype und felixmax_
+        © 2024 by logilype und felixmax_ 
     </div>
     
 </body>
