--- a/server/data/uploadmedia.html
+++ b/server/data/uploadmedia.html
@@ -11,12 +11,12 @@
         Cafeteria Panel
         <button id="logoutBtn">Ausloggen</button>
     </div>
-    <div class="navbar">
+    <div class="navbar" id="navbar">
         <div class="navbar-item">
             <a href="/panel">Home</a>
         </div>
         <div class="navbar-item">
-            <a href="/panel/menu">Menü bearbeiten</a>
+            <a href="/panel/offers">Angebote bearbeiten</a>
         </div>
         <div class="navbar-item">
             <a href="/panel/advertising">Werbung bearbeiten</a>
